Fix broken collapse in forms

--- a/less/moodle/forms.less
+++ b/less/moodle/forms.less
@@ -29,7 +29,7 @@ form {
     border-width: 1px 0 0 0;
     padding: 0;
 }
-.mform fieldset.collapsed.jsprocessed div.fcontainer {
+.jsenabled .mform .collapsed .fcontainer {
     display: none;
 }
 .mform .fitem .fitemtitle div {
